[package]
name = "assignment2"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"     # or current version
anchor-lang = "0.30.1"  

solana-sdk = "1.15.2"
solana-client = "1.15.2"
solana-program = "1.15.2"

borsh = "0.10.3"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bs58 = "0.5.1"
